5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1596_1015.log
== TEST (2019-03-31 22:34:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite:   "))
b = int(input("digite:   "))
c = int(input("digite:   "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a, b, c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:35:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite:   "))
b = int(input("digite:   "))
c = int(input("digite:   "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a, b, c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- EXECUTION TIME:
0.224372
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:35:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite:   "))
b = int(input("digite:   "))
c = int(input("digite:   "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:36:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite:   "))
b = int(input("digite:   "))
c = int(input("digite:   "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- EXECUTION TIME:
0.189317
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:36:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite:   "))
b = int(input("digite:   "))
c = int(input("digite:   "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:37:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite:   "))
b = int(input("digite:   "))
c = int(input("digite:   "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:37:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite:   "))
b = int(input("digite:   "))
c = int(input("digite:   "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- EXECUTION TIME:
0.19695
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:37:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite:   "))
b = int(input("digite:   "))
c = int(input("digite:   "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:38:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite:"))
b = int(input("digite:"))
c = int(input("digite:"))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:38:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite:"))
b = int(input("digite:"))
c = int(input("digite:"))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- EXECUTION TIME:
0.178733
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:39:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite: "))
b = int(input("digite: "))
c = int(input("digite: "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:39:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite: "))
b = int(input("digite: "))
c = int(input("digite: "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- EXECUTION TIME:
0.172273
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:40:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite: "))
b = int(input("digite: "))
c = int(input("digite: "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:40:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite: "))
b = int(input("digite: "))
c = int(input("digite: "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:41:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite: "))
b = int(input("digite: "))
c = int(input("digite: "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- EXECUTION TIME:
0.286591
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:41:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite: "))
b = int(input("digite: "))
c = int(input("digite: "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:42:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite: "))
b = int(input("digite: "))
c = int(input("digite: "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- EXECUTION TIME:
0.151646
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:46:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite: "))
b = int(input("digite: "))
c = int(input("digite: "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
pint(intermediario)
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    pint(intermediario)
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:47:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite: "))
b = int(input("digite: "))
c = int(input("digite: "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
print(intermediario)
print(v2)
-- EXECUTION TIME:
0.155512
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:47:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite: "))
b = int(input("digite: "))
c = int(input("digite: "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
print(intermediario)
print(v2)
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:48:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite: "))
b = int(input("digite: "))
c = int(input("digite: "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
print(intermediario)
print(v2)
-- EXECUTION TIME:
0.178548
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 07:59:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite: "))
b = int(input("digite: "))
c = int(input("digite: "))
v1 = min(a, b, c)
v2 = max(a, b, c)
intermediario = a + b + c - v1 - v2
print(v1)
print(intermediario)
print(v2)
-- EXECUTION TIME:
0.186916
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
